--- a/ModelValidation/Views/Shared/_Layout.cshtml
+++ b/ModelValidation/Views/Shared/_Layout.cshtml
@@ -1,8 +1,4 @@
 ﻿
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
 
 <html>
@@ -28,6 +24,10 @@
             outline: 2px solid #f00;
         }
     </style>
+    
+    <script type="text/javascript" src="~/Scripts/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.validate.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 </head>
 <body>
     @RenderBody();
